# FakeSteamAPI

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  FakeSteamAPI_ContextProvider.cpp  FakeSteamAPI_Core.cpp  FakeSteamAPI_LogSys.cpp  FakeSteamAPI_Settings.cpp  FakeSteamAPI_Utilities.cpp
src/include/: ISteamApps.h  steam_api.h  steam_gameserver.h
